--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -16,10 +16,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "7484df51-b002-414c-ae42-75a2df57c78d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in /home/panhater/Urfu/stepik/labs/venv/lib/python3.12/site-packages (2.2.3)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in /home/panhater/Urfu/stepik/labs/venv/lib/python3.12/site-packages (from pandas) (2.1.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /home/panhater/Urfu/stepik/labs/venv/lib/python3.12/site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /home/panhater/Urfu/stepik/labs/venv/lib/python3.12/site-packages (from pandas) (2024.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /home/panhater/Urfu/stepik/labs/venv/lib/python3.12/site-packages (from pandas) (2024.2)\n",
+      "Requirement already satisfied: six>=1.5 in /home/panhater/Urfu/stepik/labs/venv/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install pandas"
    ]
@@ -35,14 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "bfc3346f-3843-4aff-aec0-54321b9774f0",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# write your code here"
+    "import pandas as pd"
    ]
   },
   {
@@ -57,14 +70,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "fa5deec6-c85e-4d88-89df-bea7d75fcbba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Чтение данных из файла 'titanic.csv'\n",
-    "# Используйте метод pd.read_csv()\n",
-    "# write your code here"
+    "titanic_df = pd.read_csv('titanic.csv')"
    ]
   },
   {
@@ -78,14 +89,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "216e104c-259f-4ecd-9cd4-40362f61ca4e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   PassengerId  Survived  Pclass  \\\n",
+      "0            1         0       3   \n",
+      "1            2         1       1   \n",
+      "2            3         1       3   \n",
+      "3            4         1       1   \n",
+      "4            5         0       3   \n",
+      "\n",
+      "                                                Name     Sex   Age  SibSp  \\\n",
+      "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
+      "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
+      "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
+      "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
+      "4                           Allen, Mr. William Henry    male  35.0      0   \n",
+      "\n",
+      "   Parch            Ticket     Fare Cabin Embarked  \n",
+      "0      0         A/5 21171   7.2500   NaN        S  \n",
+      "1      0          PC 17599  71.2833   C85        C  \n",
+      "2      0  STON/O2. 3101282   7.9250   NaN        S  \n",
+      "3      0            113803  53.1000  C123        S  \n",
+      "4      0            373450   8.0500   NaN        S  \n"
+     ]
+    }
+   ],
    "source": [
-    "# Вывод первых 5 строк данных\n",
-    "# Используйте метод .head()\n",
-    "# write your code here"
+    "print(titanic_df.head())"
    ]
   },
   {
@@ -99,11 +135,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "43650b4f-f3e7-4480-b874-b5552f564383",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 891 entries, 0 to 890\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   PassengerId  891 non-null    int64  \n",
+      " 1   Survived     891 non-null    int64  \n",
+      " 2   Pclass       891 non-null    int64  \n",
+      " 3   Name         891 non-null    object \n",
+      " 4   Sex          891 non-null    object \n",
+      " 5   Age          714 non-null    float64\n",
+      " 6   SibSp        891 non-null    int64  \n",
+      " 7   Parch        891 non-null    int64  \n",
+      " 8   Ticket       891 non-null    object \n",
+      " 9   Fare         891 non-null    float64\n",
+      " 10  Cabin        204 non-null    object \n",
+      " 11  Embarked     889 non-null    object \n",
+      "dtypes: float64(2), int64(5), object(5)\n",
+      "memory usage: 83.7+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(titanic_df.info())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -118,16 +183,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "f7910fde-24f7-4cf8-991d-01f08bc45b63",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PassengerId      0\n",
+      "Survived         0\n",
+      "Pclass           0\n",
+      "Name             0\n",
+      "Sex              0\n",
+      "Age            177\n",
+      "SibSp            0\n",
+      "Parch            0\n",
+      "Ticket           0\n",
+      "Fare             0\n",
+      "Cabin          687\n",
+      "Embarked         2\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "# Проверка на наличие NaN в DataFrame\n",
-    "# Используйте метод .isna()\n",
-    "# write your code here"
+    "print(titanic_df.isna().sum())"
    ]
   },
   {
@@ -140,14 +223,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "7d901187-75a9-497e-8774-6e0dde584197",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Заполнение NaN определенным значением (например, нулем)\n",
-    "# Используйте метод .fillna()\n",
-    "# write your code here"
+    "titanic_filled = titanic_df.fillna(0)"
    ]
   },
   {
@@ -160,16 +241,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "4d188deb-0818-4b01-b3a5-9d20d2166d10",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# Удаление строк, содержащих NaN\n",
-    "# Используйте метод .dropna()\n",
-    "# write your code here"
+    "titanic_dropped = titanic_df.dropna()"
    ]
   },
   {
@@ -184,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "d11f6114-ce4b-4e71-afec-adf1d8c1ec6e",
    "metadata": {
     "tags": []
@@ -192,20 +271,16 @@
    "outputs": [],
    "source": [
     "# Выбор столбца по метке\n",
-    "# Используйте синтаксис DataFrame['название_столбца']\n",
-    "# write your code here\n",
+    "age_column = titanic_df['Age']\n",
     "\n",
     "# Выбор нескольких столбцов\n",
-    "# Используйте синтаксис DataFrame[['столбец_1', 'столбец_2']]\n",
-    "# write your code here\n",
+    "selected_columns = titanic_df[['Name', 'Age']]\n",
     "\n",
     "# Выбор строк по индексу\n",
-    "# Используйте метод .loc[]\n",
-    "# write your code here\n",
+    "first_five_rows = titanic_df.loc[:4]\n",
     "\n",
     "# Выбор строк и столбцов по условию\n",
-    "# Используя логические операции, выберите мужчин старше 30\n",
-    "# write your code here"
+    "older_men = titanic_df.loc[(titanic_df['Sex'] == 'male') & (titanic_df['Age'] > 30)]"
    ]
   },
   {
@@ -219,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "de5e850c-e920-4ae4-aadb-3f1953438b09",
    "metadata": {
     "tags": []
@@ -227,8 +302,7 @@
    "outputs": [],
    "source": [
     "# Сортировка данных по столбцу 'столбец_1' по возрастанию\n",
-    "# Используйте метод .sort_values()\n",
-    "# write your code here"
+    "sorted_fare = titanic_df.sort_values(by='Fare', ascending=True)"
    ]
   },
   {
@@ -242,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "id": "25ced901-0482-49a8-8c12-d192e84e3fb3",
    "metadata": {
     "tags": []
@@ -250,8 +324,7 @@
    "outputs": [],
    "source": [
     "# Найдите долю выживших среди всех PClass\n",
-    "# Используйте метод .groupby()\n",
-    "# write your code here"
+    "survival_rate = titanic_df.groupby('Pclass')['Survived'].mean()"
    ]
   },
   {
@@ -270,11 +343,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "a1b4deaa-cd06-41b3-8084-5c2d3a867811",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   PassengerId  Survived  Pclass  \\\n",
+      "0            1         0       3   \n",
+      "1            2         1       1   \n",
+      "2            3         1       3   \n",
+      "3            4         1       1   \n",
+      "4            5         0       3   \n",
+      "5            6         0       3   \n",
+      "6            7         0       1   \n",
+      "7            8         0       3   \n",
+      "8            9         1       3   \n",
+      "9           10         1       2   \n",
+      "\n",
+      "                                                Name     Sex   Age  SibSp  \\\n",
+      "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
+      "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
+      "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
+      "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
+      "4                           Allen, Mr. William Henry    male  35.0      0   \n",
+      "5                                   Moran, Mr. James    male   0.0      0   \n",
+      "6                            McCarthy, Mr. Timothy J    male  54.0      0   \n",
+      "7                     Palsson, Master. Gosta Leonard    male   2.0      3   \n",
+      "8  Johnson, Mrs. Oscar W (Elisabeth Vilhelmina Berg)  female  27.0      0   \n",
+      "9                Nasser, Mrs. Nicholas (Adele Achem)  female  14.0      1   \n",
+      "\n",
+      "   Parch            Ticket     Fare Cabin Embarked  \n",
+      "0      0         A/5 21171   7.2500     0        S  \n",
+      "1      0          PC 17599  71.2833   C85        C  \n",
+      "2      0  STON/O2. 3101282   7.9250     0        S  \n",
+      "3      0            113803  53.1000  C123        S  \n",
+      "4      0            373450   8.0500     0        S  \n",
+      "5      0            330877   8.4583     0        Q  \n",
+      "6      0             17463  51.8625   E46        S  \n",
+      "7      1            349909  21.0750     0        S  \n",
+      "8      2            347742  11.1333     0        S  \n",
+      "9      0            237736  30.0708     0        C  \n",
+      "Pclass\n",
+      "1    32.923241\n",
+      "2    28.091467\n",
+      "3    18.177026\n",
+      "Name: Age, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "titanic_df = pd.read_csv('titanic.csv')\n",
+    "titanic_filled = titanic_df.fillna(0)\n",
+    "\n",
+    "print(titanic_filled.head(10))\n",
+    "\n",
+    "filtered_age = titanic_filled[titanic_filled['Age'] > 30]\n",
+    "sorted_fare_descending = titanic_filled.sort_values(by='Fare', ascending=False)\n",
+    "average_age_by_class = titanic_filled.groupby('Pclass')['Age'].mean()\n",
+    "\n",
+    "print(average_age_by_class)\n"
+   ]
   }
  ],
  "metadata": {
@@ -293,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
